<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">计算器</string>
    <string name="information">简单计算器</string>
    <string name="menu_settings">Settings</string>

    <string name="first_number">第一个数</string>
    <string name="second_number">第二个数</string>
    <string name="calculation_type">计算类型:</string>
    <string name="select_type">选择</string>
    <string name="calculate_text">计算</string>
    <string name="selectCalcTypeInfo">请选择计算的类型:</string>
    <string name="back_text">返回</string>
    <string name="ok_text">确定</string>

    <string name="addition">加法</string>
    <string name="minus">减法</string>
    <string name="multiply">乘法</string>
    <string name="divider">除法</string>
</resources>