<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity" >
    <!--
    match_parent： Android2.2中match_parent和fill_parent是一个意思 .两个参数意思一样，match_parent更贴切
    fill_parent:将强制性地使构件扩展，以填充布局单元内尽可能多的空间，让它布满整个屏幕
    wrap_content：以TextView和ImageView控件为例，设置为wrap_content将完整显示其内部的文本和图像。布局元素将根据内容更改大小
    android:layout_marginLeft:靠右显示，意思是距离左边框的距离；
    -->
    <TableRow>
    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dip"
        android:textSize="14sp"
        android:text="@string/information" />
    </TableRow>
    <TableRow>
        <TextView android:layout_height="wrap_content"
            android:layout_width="fill_parent"
            android:layout_marginLeft="20dip"
            android:text="@string/first_number"/>
        <EditText android:id="@+id/firstNumber"
            android:hint="请输入第一个数字"
            android:layout_marginLeft="5dip"
            android:inputType="number"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"/>
    </TableRow>
    
    <TableRow>
        <TextView android:layout_height="wrap_content"
            android:layout_width="fill_parent"
              android:layout_marginLeft="20dip"
            android:text="@string/second_number"/>
        <EditText android:id="@+id/secondNumber"
            android:hint="请输入第二个数字"
            android:layout_marginLeft="5dip"
            android:inputType="number"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"/>
    </TableRow>
    <TableRow >
        <TextView android:id="@+id/calc_type_text"
            android:layout_width="fill_parent"
              android:layout_marginLeft="20dip"
            android:layout_height="wrap_content"
            android:text="@string/calculation_type"/>
        <TextView android:id="@+id/calc_type"
            android:layout_width="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_height="wrap_content"
            android:text="未选择计算类型"
            />
        <Button android:id="@+id/selectType"
            android:layout_marginLeft="5dip"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/select_type"
            />
    </TableRow>
    <TableRow >
        <Button android:id="@+id/calculate"
              android:layout_marginLeft="10dip"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/calculate_text"
            />
    </TableRow>
</TableLayout>